--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
 	"name": "nodejsapp1",
 	"version": "0.0.1",
 	"description": "Node.js sample app for OpenShift 3",
-	"main": "server.js",
+	"main": "server2.js",
 	"scripts": {
-		"start": "node server.js",
+		"start": "node server2.js",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"dependencies": {
 		"express": "~4.7.2",
 		"mongoose": "~3.6.2",
+		"mongodb": "~2.0"
 		"morgan": "~1.2.2",
 		"body-parser": "~1.5.2",
 		"method-override": "~2.3.10"
