--- a/package.json
+++ b/package.json
@@ -2,15 +2,13 @@
 	"name": "nodejsapp1",
 	"version": "0.0.1",
 	"description": "Node.js sample app for OpenShift 3",
-	"main": "server2.js",
-	"scripts": {
+	"main": "server1.js",
+	"_scripts": {
 		"start": "nodemon server2.js > my_app_log.log 2> my_app_err.log"
 	},
 	"dependencies": {
-		"express": "^4.7.4",
 		"body-parser": "~1.5.2",
 		"method-override": "~2.3.10",
-		"mongodb": "~2.2.19",
 		"mongoose": "~3.6.2",
 		"morgan": "~1.2.2"
 	},
@@ -19,5 +17,9 @@
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/patelvijayg/nodejs-app1.git"
+	},
+	"devDependencies": {
+		"express": "^4.16.3",
+		"mongodb": "^2.2.36"
 	}
 }
